--- a/app/page.css
+++ b/app/page.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 header {
   position: fixed;
@@ -9,7 +9,24 @@ header {
   z-index: 99;
 }
 
-h1, h2, h3, h4, h5, h6, p, a, span, div, li, button {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+span,
+div,
+li,
+button {
   font-family: "Be Vietnam Pro", sans-serif;
+  font-style: normal;
+}
+
+.bebas-neue-regular {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
   font-style: normal;
 }
