--- a/app/page.css
+++ b/app/page.css
@@ -2,6 +2,11 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Bayon&display=swap');
+
+
 header {
   position: fixed;
   top: 0px;
@@ -20,13 +25,26 @@ a,
 span,
 div,
 li,
-button {
+/* button {
   font-family: "Be Vietnam Pro", sans-serif;
+  font-style: normal;
+} */
+
+button {
   font-style: normal;
 }
 
 .bebas-neue-regular {
   font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.inter-font {
+  font-family: "Inter", sans-serif;
+}
+
+.bayon-font {
+  font-family: "Bayon", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
