--- a/app/globals.css
+++ b/app/globals.css
@@ -37,3 +37,9 @@ body {
   transform: scale(1) !important;
   transition: all 0.3s ease;}
 
+header {
+  height: auto;
+  height: -moz-available; /* Firefox */
+  height: -webkit-fill-available; /* Safari / Chrome */
+  max-height: 90px;
+}
