Final changes 4 pages

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,7 +35,8 @@ body {
 .slick-center {
   opacity: 1 !important;
   transform: scale(1) !important;
-  transition: all 0.3s ease;}
+  transition: all 0.3s ease;
+}
 
 header {
   height: auto;
