--- a/app/page.css
+++ b/app/page.css
@@ -2,10 +2,9 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Bayon&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Bayon&display=swap");
 
 header {
   position: fixed;
@@ -30,6 +29,10 @@ li,
   font-style: normal;
 } */
 
+.Vietnam-font {
+  font-family: "Be Vietnam Pro", sans-serif;
+  font-style: normal;
+}
 button {
   font-style: normal;
 }
